2001-06-07  Havoc Pennington  <hp@redhat.com>
	
	* gtk/Makefile.am: fixups for glib-mkenums and glib-genmarshal
	(not tested yet because with absolute path to srcdir I can't build
	atk, but it was broken anyway so this may help)	

2001-06-07  Havoc Pennington  <hp@redhat.com>

	* configure.in: output m4macros/Makefile
	
Wed Jun  6 21:59:16 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): hook up arrow
	buttons.  Fixes #55460 reported by matthiasc@poet.de.

Wed Jun  6 21:18:54 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_real_collapse_row): centralize
	expansion/collapsing so it only happens in one place.
	(gtk_tree_view_real_expand_row): ditto.

2001-06-07  Havoc Pennington  <hp@redhat.com>

	* tests/Makefile.am: add missing -I flag

	* gtk/Makefile.am: use @GLIB_MKENUMS@, @GLIB_GENMARSHAL@, etc.

	* configure.in: use pkg-config to see if GModule is
	supported; fix to properly turn on included loaders 
	when GModule isn't supported; don't use AC_CHECK_LIB 
	when libs are not installed yet

	* autogen.sh: add support for AUTOGEN_SUBDIR_MODE

	* Makefile.am (SUBDIRS): add m4macros subdir

	* gtk/Makefile.am: $(srcdir)/foo targets must be $(srcdir)/foo in
	dependencies also.

Wed Jun  6 19:31:11 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_model): fix silly bug
	reported by "Padraig O'Briain" <Padraig.Obriain@Sun.COM>.

Wed Jun  6 20:01:38 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c
	(gtk_tree_view_real_expand_collapse_cursor_row): Handle key
	bindings to expand and collapse rows.
	(gtk_tree_view_real_select_cursor_parent): New key binding.
	(gtk_tree_view_real_toggle_cursor_row): New key binding.

	* gtk/gtkmarshal.list: new
	marshaller. (VOID__BOOLEAN_BOOLEAN_BOOLEAN)

2001-06-06  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkrange.c (gtk_range_class_init): add "inverted" property
